--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,44 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
-      <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.17/index.global.min.js'></script>
-      <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.17/index.global.min.js'></script>
 
-      
+  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
+  <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.17/index.global.min.js'></script>
+  <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.17/index.global.min.js'></script>
 
-
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
   <title>ElevateSelf</title>
 </head>
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  
   <nav>
     <div class="header">
-
-      <div class="d-flex justify-content-between align-items-center p- w-100">
-
-        <div><a href="/"><img src="/images/logo.png" alt="Logo" height="90"></a></div>
-        
-           <div class="d-flex gap-2">
-      
-            <% if (user) { %>
-              <a href="/user/index"><button type="button" class="btn btn-primary">🏠Home</button></a>
-              <a href="/user/new"><button type="button" class="btn btn-primary">Create a new Goal</button></a>
-              <a class="sign-out" href="/auth/sign-out"><button type="button" class="btn btn-danger">SIGN OUT</button></a>
-              <% } else { %>
-              <a href="/auth/sign-up"><button type="button" class="btn btn-primary">SIGN UP</button></a>
-              <a href="/auth/sign-in"><button type="button" class="btn btn-primary">SIGN IN</button></a>
-              
-            <% } %>
+      <div class="nav-container">
+        <div class="logo">
+          <a href="/"><img src="/images/logo.png" alt="Logo" height="90"></a>
+        </div>
+        <div class="nav-links">
+          <% if (user) { %>
+            <a href="/user/index"><button class="nav-button primary">Home</button></a>
+            <a href="/user/new"><button class="nav-button primary">Create a new Goal</button></a>
+            <a href="/auth/sign-out"><button class="nav-button danger">SIGN OUT</button></a>
+          <% } else { %>
+            <a href="/auth/sign-up"><button class="nav-button primary">SIGN UP</button></a>
+            <a href="/auth/sign-in"><button class="nav-button primary">SIGN IN</button></a>
+          <% } %>
         </div>
       </div>
     </div>
-
-
   </nav>
   <main>
